# simulinkOSC

./: .gitignore  CMakeLists.txt  README.md  compile.bat  install.bat  send2SC.cpp  simulinkOSC.cpp  simulinkOSC_dev.slx  simulinkOSC_lib.slx  simulinkOSC_mycode.cpp  simulinkOSC_test.slx  simulinkOSC_wrapper.cpp  slblocks.m
oscpack_1_1_0/: CMakeLists.txt
oscpack_1_1_0/examples/: SimpleSend.cpp
simulink/: simulinkOSC.cpp  simulinkOSC_wrapper.cpp
